zero-schema-derive/tests/ui/fail/03_packed_and_shape.stderr
error: packed schema structs are not supported
 --> tests/ui/fail/03_packed_and_shape.rs:2:33
  |
2 | #[derive(ZeroSchema)] #[repr(C, packed)] struct Packed { x:u32 }
  |                                 ^^^^^^

error: ZeroSchema structs must have named fields
 --> tests/ui/fail/03_packed_and_shape.rs:3:35
  |
3 | #[derive(ZeroSchema)] struct Tuple(u8);
  |                                   ^^^^

error: schema structs must contain at least one field
 --> tests/ui/fail/03_packed_and_shape.rs:3:30
  |
3 | #[derive(ZeroSchema)] struct Tuple(u8);
  |                              ^^^^^
